--- a/src/scrollerful.sass
+++ b/src/scrollerful.sass
@@ -44,6 +44,7 @@
 		.#{$script_name}
 			&__plate
 				@include lvw(100)
+				@include svh(100)
 				left: 0
 				max-height: none
 				max-width: 100%
